// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Loader__LoaderWrapper-codnj1-0 kdewRx"
>
  <div
    className="Loader__Chase-codnj1-2 BJiRV"
    id={null}
  >
    <div
      className="Loader__Dot-codnj1-3 fTKJWI"
    />
    <div
      className="Loader__Dot-codnj1-3 fTKJWI"
    />
    <div
      className="Loader__Dot-codnj1-3 fTKJWI"
    />
    <div
      className="Loader__Dot-codnj1-3 fTKJWI"
    />
  </div>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm"
  id={null}
  rows={null}
>
  <div
    className="Loader__Fill-codnj1-1 hdRbSr"
    id={null}
  />
  <div
    className="Loader__LoaderWrapper-codnj1-0 kdewRx"
  >
    <div
      className="Loader__Chase-codnj1-2 BJiRV"
      id={null}
    >
      <div
        className="Loader__Dot-codnj1-3 fTKJWI"
      />
      <div
        className="Loader__Dot-codnj1-3 fTKJWI"
      />
      <div
        className="Loader__Dot-codnj1-3 fTKJWI"
      />
      <div
        className="Loader__Dot-codnj1-3 fTKJWI"
      />
    </div>
  </div>
</section>
`;
